--- a/products/floor-cleaner.html
+++ b/products/floor-cleaner.html
@@ -19,43 +19,13 @@
 
   <main class="product-detail-page">
     <div class="container">
-      <div class="product-detail" id="product-detail">
-        <div class="product-detail-gallery">
-          <img id="product-image" src="../assets/images/Solvy Floor cleaner.png" alt="SOLVY Floor Cleaner" class="product-detail-image">
-        </div>
-        <div class="product-detail-content">
-          <p id="product-category" class="product-detail-category">Surface Care</p>
-          <h1 id="product-name" class="product-detail-title">SOLVY Floor Cleaner</h1>
-          <p id="product-short-description" class="product-detail-lead">High-performance deodorizing floor cleaner for daily maintenance.</p>
-          <p id="product-description" class="product-detail-description">Product description loads from data.</p>
-
-          <div class="product-detail-blocks">
-            <div class="product-detail-block">
-              <h6 class="product-detail-block-title">Key features</h6>
-              <ul id="product-features" class="product-detail-list"></ul>
-            </div>
-            <div class="product-detail-block">
-              <h6 class="product-detail-block-title">Available sizes</h6>
-              <ul id="product-sizes" class="product-detail-list product-meta-list"></ul>
-            </div>
-            <div class="product-detail-block">
-              <h6 class="product-detail-block-title">Industries</h6>
-              <ul id="product-industries" class="product-detail-list product-meta-list"></ul>
-            </div>
-          </div>
-
-          <div class="product-detail-actions">
-            <a id="product-quote-btn" href="../contact.html" class="btn btn-accent">Get quote</a>
-            <a id="product-whatsapp-btn" href="https://wa.me/919111912346" target="_blank" rel="noopener" class="btn btn-outline-success"><i class="bi bi-whatsapp me-1"></i> WhatsApp</a>
-          </div>
-        </div>
-      </div>
+      <div id="product-detail"></div>
     </div>
   </main>
 
   <div id="footer"></div>
 
-  <a href="https://wa.me/919111912346?text=Hi%20SOLVY%2C%20I%27d%20like%20to%20enquire%20about%20your%20floor%20cleaner." class="whatsapp-float" target="_blank" rel="noopener" aria-label="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
+  <a href="https://wa.me/919111912346" class="whatsapp-float" target="_blank" rel="noopener" aria-label="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/js/main.js"></script>
